syntax = "proto3";

package stream.v0;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/AnthonyHewins/schwabn/gen/go/stream/v0;stream";

message ChartEquity {
    string symbol = 1;
    double open_price = 2;
    double high_price = 3;
    double low_price = 4;
    double close_price= 5;
    double volume = 6;
    int64 sequence = 7;
    google.protobuf.Timestamp time = 8;
    int64 day = 9;
}